[package]
name = "cosy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
mime = "0.3.17"
mime_guess = "2.0.5"
url = "2.5.8"
winnow = "0.7.14"

[dev-dependencies]
clap = { version = "4.4.57", features = ["derive"] }
urlencoding = "2.1.3"
serde = {version = "1" , features = ["derive"] }
serde_json = "1.0.149"
reqwest = {version = "0.13.1", features = ["blocking"]}
anyhow = "1.0.100"
